testsuite/poke.pkl/attr-ref-diag-1.pk
/* { dg-do compile } */

var a = 23#B'ref; /* { dg-error "not defined" } */
